<resources>
    <string name="app_name">Robot App</string>
    <string name="Start">START</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Stop">STOP</string>
    <string name="Connect">CONNECT</string>
    <string name="Go_Back">GO BACK</string>
    <string name="Cancel">Cancel</string>
    <string name="WelcomeMessage">Welcome to the Robot App!</string>
    <string name="SelectMode">Select Mode</string>
    <string name="Manual">MANUAL</string>
    <string name="Automatic">AUTOMATIC</string>
    <string name="Backwards">Backwards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="tutorial">Tutorial\n</string>
    <string name="TutorialText1">Click on the <b><i>CONNECT</i></b> button to look for the robot and establish a connection with it.\n\nOnce we have our app connected with the robot we can choose between <b><i>MANUAL</i></b> or <b><i>AUTOMATIC</i></b> control of the robot. In the above part of the control you will see the map of the robot and in the bottom some functionalities.</string>
    <string name="TutorialText2">\nIf <b><i>MANUAL</i></b> selected, use the different bottoms to <b>start/stop/control</b> the robot. \nIf <b><i>AUTOMATIC</i></b> selected, use <b>start/stop</b> to control the beginning and end of the movement or <b>return home</b> to make the robot go to the initial position</string>
    <string name="TutorialText3">\nThe <b>map</b> represents in a Matrix-like representation the surroundings of the position of the robot. In green we represent the path followed by the robot when they are no obstacles whereas a red square is displayed when there is an obstacle. \n</string>

</resources>
