<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/TutorialText0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tutorial"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TutorialText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TutorialText1"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/TutorialText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TutorialText2"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tutorialText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TutorialText3"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>