<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1.05"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleX="2.5"
            android:scaleY="2.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center_horizontal"
            android:text="@string/WelcomeMessage"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2" />


            <Button
                android:id="@+id/button_connect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:background="@drawable/button_shape"
                android:onClick="StartConnection"
                android:text="@string/Connect"
                android:textSize="24sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center_horizontal"
            android:text="@string/SelectMode"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:padding="1sp">

                <Button
                    android:id="@+id/button_manual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="StartManual"
                    android:text="@string/Manual"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:background="@drawable/button_shape"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:padding="1sp">

                <Button
                    android:id="@+id/button_automatic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Automatic"
                    android:onClick="StartAutomatic"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:background="@drawable/button_shape"/>
            </FrameLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2" />

    </LinearLayout>

    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">
        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="400dp"
            android:text="Show Spinner"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnShow"
            android:layout_toRightOf="@+id/btnShow"
            android:text="Hide Spinner"
            android:visibility="gone"/>
        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnShow"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
    </RelativeLayout> -->




</android.support.constraint.ConstraintLayout>